# WireguardBridge

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  setup.sh  sitemap.xml
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  labels.yml
.github/ISSUE_TEMPLATE/: BUG-REPORT.yaml  FEATURE-REQUEST.yaml
.github/workflows/: build-latest.yml  build-tag.yml  check-commit-message-pr.yml  deploy-docs.yml  labels.yml
architecture/: index.html
bridge/: __init__.py  logger.py  main.py
bridge/admin/: __init__.py  run_wireguard.py  setup_openvpn.py  setup_wireguard.py  shell_wrapper.py
bridge/models/: __init__.py
bridge/models/configs/: __init__.py  openvpn.py  wireguard.py
bridge/models/processes/: __init__.py  config.py  info.py
bridge/processes/: __init__.py  manager.py  openvpn_process.py  wireguard_process.py
bridge/templates/: client.conf.j2  peer.conf.j2  server.conf.j2
configuration/: index.html
docs/en/: architecture.md  configuration.md  index.md  usage.md
docs/ru/: architecture.md  configuration.md  index.md  usage.md
ru/: index.html
ru/architecture/: index.html
ru/configuration/: index.html
ru/usage/: index.html
search/: search_index.json
usage/: index.html
