[project]
name = "wireguard-bridge"
version = "0.1.0"
description = "Docker container that bridges WireGuard clients to OpenVPN servers"
authors = [{ name = "Renat Mustafin", email = "mustafinrr.rm@gmail.com" }]
maintainers = [{ name = "Renat Mustafin", email = "mustafinrr.rm@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11.7",
    "jinja2>=3.1.6",
    "python-wireguard>=0.2.2",
    "click>=8.1.7",
]

[project.scripts]
setup-openvpn = "bridge.admin.setup_openvpn:main"
setup-wireguard = "bridge.admin.setup_wireguard:main"
run-wireguard = "bridge.admin.run_wireguard:main"


[dependency-groups]
dev = ["ruff>=0.12.0", "pre-commit>=4.2.0"]


[tool.ruff]
line-length = 120


[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "YTT", "S"]
ignore = [
    "S104", # Possible binding to all interfaces.
    "S110", # `try`-`except`-`pass` detected, consider logging the exception.
    "S603", # call: check for execution of untrusted input
]

[tool.ruff.lint.isort]
lines-after-imports = 2

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["bridge"]

[tool.hatch.build.targets.wheel.force-include]
"bridge/templates" = "bridge/templates"
